fix off-canvas z-index

--- a/mvc/app/assets/styles/custom.css
+++ b/mvc/app/assets/styles/custom.css
@@ -342,3 +342,7 @@ hr {
 #auth-tabs .ui-tabs-nav .ui-state-active a {
     color: #000000;
 }
+
+.off-canvas {
+    z-index: 99;
+}
